# NIOH3AffixEditor

./: .gitignore  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Nioh3AffixEditor.csproj  Nioh3AffixEditor.sln  TEST_BUILD.md  app.manifest  build_dll.bat  extract_icon.ps1
.github/workflows/: build.yml
Engine/: AffixEngineNotImplemented.cs  IAffixEngine.cs  NativeAffixEngine.cs  NativeBridge.cs  NativeDllLoader.cs
Infrastructure/: ObservableObject.cs  RelayCommand.cs
Models/: AffixSlotData.cs  EquipmentData.cs  ProcessInfo.cs
Nioh3AffixCore/: CMakeLists.txt  aob_scanner.cpp  aob_scanner.h  code_injector.cpp  code_injector.h  dllmain.cpp  exports.cpp  exports.h  memory_layout.h  skill_bypass_injector.cpp  skill_bypass_injector.h
Properties/PublishProfiles/: SingleFile-win-x64.pubxml
Services/: AffixIdTable.cs  AppPaths.cs  ProcessDiscoveryService.cs  UnderworldSkillTable.cs  UpdateCache.cs  UpdateCacheStore.cs  UpdateCheckResult.cs  UpdateCheckService.cs
ViewModels/: AffixSlotViewModel.cs  EquipmentViewModel.cs  MainViewModel.cs
